# stupid-db

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  2026-02-14-083025-this-session-is-being-continued-from-a-previous-co.txt  CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.yml  main.py  pyproject.toml
crates/agent/: Cargo.toml
crates/agent/src/: agent_store.rs  config.rs  executor.rs  group_store.rs  lib.rs  session.rs  skill_store.rs  team.rs  telemetry_store.rs  types.rs  yaml_schema.rs
crates/athena/: Cargo.toml
crates/athena/src/: client.rs  config.rs  convert.rs  lib.rs  parquet.rs  query_step.rs  result.rs
crates/athena/src/convert/: documents.rs  mod.rs  parsing.rs  tests_advanced.rs  tests_basic.rs
crates/athena/src/parquet/: builders.rs  error.rs  mod.rs  schema.rs  tests.rs  writer.rs
crates/athena/tests/: integration_test.rs
crates/athena/tests/integration_test/: config.rs  convert.rs  main.rs  query_step.rs  result.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: catalog.rs  executor.rs  lib.rs  manifest.rs  plan.rs  store.rs
crates/catalog/src/catalog/: builder.rs  mod.rs  partial.rs  tests.rs  types.rs
crates/catalog/src/store/: error.rs  external.rs  mod.rs  operations.rs  tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  config.rs  main.rs  provider_bridge.rs  server_client.rs  session.rs  terminal.rs
crates/compute/: Cargo.toml
crates/compute/src/: engine.rs  lib.rs
crates/compute/src/algorithms/: communities.rs  dbscan.rs  degree.rs  graph_stats.rs  kmeans.rs  mod.rs  pagerank.rs  prefixspan.rs  shortest_path.rs  streaming_kmeans.rs
crates/compute/src/pipeline/: anomaly.rs  cooccurrence.rs  features.rs  metrics.rs  mod.rs  trend.rs
crates/compute/src/scheduler/: metrics.rs  mod.rs  runner.rs  state.rs  task.rs  types.rs
crates/connector/: Cargo.toml
crates/connector/src/: entity_extract.rs  lib.rs
crates/eisenbahn/: Cargo.toml
crates/eisenbahn/src/: broker.rs  config.rs  error.rs  lib.rs  message.rs  metrics.rs  pipeline.rs  pubsub.rs  reqrep.rs  traits.rs  transport.rs  worker.rs
crates/eisenbahn/src/config/: helpers.rs  loading.rs  mod.rs  tests.rs  types.rs  validation.rs
crates/eisenbahn/src/messages/: events.rs  mod.rs  pipeline.rs  services.rs  topics.rs
crates/eisenbahn/tests/: broker_test.rs  full_pipeline_test.rs  health_test.rs  pipeline_test.rs  pubsub_test.rs  reqrep_test.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs  store.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs  parquet_import.rs
crates/ingest/src/document/: chunker.rs  md.rs  mod.rs  pdf.rs  txt.rs
crates/ingest/src/embedding/: batcher.rs  cache.rs  mod.rs  ollama.rs  openai.rs  template.rs  traits.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs  provider.rs  query.rs
crates/llm/src/providers/: claude.rs  claude_tool_provider.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  error.rs  lib.rs  server.rs  transport.rs  types.rs
crates/notify/: Cargo.toml
crates/notify/src/: dispatcher.rs  email.rs  lib.rs  telegram.rs  templating.rs  traits.rs  webhook.rs
crates/queue/: Cargo.toml
crates/queue/src/: batcher.rs  config.rs  consumer.rs  error.rs  lib.rs  parser.rs  sqs.rs
crates/rules/: Cargo.toml
crates/rules/src/: audit_log.rs  enrichment.rs  entity_schema.rs  evaluator.rs  feature_config.rs  lib.rs  loader.rs  pattern_config.rs  scheduler.rs  schema.rs  scoring_config.rs  templates.rs  trend_config.rs  validation.rs
crates/rules/src/enrichment/: engine.rs  mod.rs  query_helpers.rs  types.rs
crates/rules/src/evaluator/: composition.rs  filters.rs  mod.rs
crates/rules/src/loader/: core.rs  error.rs  extends.rs  mod.rs  tests.rs  watcher.rs
crates/rules/src/scheduler/: core.rs  cron.rs  entry.rs  mod.rs  tests.rs
crates/rules/src/schema/: anomaly.rs  composition.rs  document.rs  enrichment.rs  envelope.rs  filters.rs  kind.rs  metadata.rs  mod.rs  notifications.rs  tests.rs
crates/rules/src/templates/: evaluators.rs  features.rs  math.rs  mod.rs  types.rs
crates/rules/src/validation/: config_checks.rs  filter_checks.rs  fuzzy.rs  mod.rs  notification_checks.rs  schedule_checks.rs  schema_checks.rs
crates/rules/tests/: examples.rs
crates/segment/: Cargo.toml
crates/segment/src/: filter.rs  index.rs  lib.rs  manager.rs  reader.rs  schema.rs  store.rs  writer.rs
crates/segment/src/store/: mod.rs  tests.rs
crates/segment/tests/: integration_test.rs
crates/segment/tests/integration_test/: helpers.rs  main.rs  pipeline.rs  rotation.rs  scan_filters.rs  store_ops.rs
crates/server/: Cargo.toml
crates/server/src/: anomaly_rules.rs  api.rs  app_config.rs  athena_connections.rs  athena_query.rs  athena_query_log.rs  background.rs  catalog_api.rs  cli.rs  connections.rs  credential_store.rs  db.rs  eisenbahn_client.rs  export.rs  graph_ops.rs  import.rs  live.rs  main.rs  queue.rs  queue_connections.rs  router.rs  rule_runner.rs  rules.rs  startup.rs  state.rs  vector_store.rs
crates/server/src/anomaly_rules/: crud.rs  lifecycle.rs  mod.rs  types.rs
crates/server/src/api/: agent_groups.rs  agents.rs  athena_query.rs  compute.rs  connections.rs  doc.rs  embedding.rs  graph.rs  health.rs  mod.rs  prompts.rs  query.rs  stille_post.rs  telemetry.rs
crates/server/src/athena_connections/: mod.rs  store.rs  tests.rs  types.rs
crates/server/src/athena_query/: execution.rs  mod.rs  schema.rs  types.rs
crates/server/src/athena_query_log/: mod.rs  store.rs  tests.rs  types.rs
crates/server/src/background/: catalog.rs  compute.rs  discovery.rs  loader.rs  mod.rs
crates/server/src/catalog_api/: externals.rs  metadata.rs  mod.rs  query.rs  (+3 more)
crates/server/tests/: villa_suggest_integration.rs
crates/storage/: Cargo.toml
crates/storage/src/: backend.rs  cache.rs  error.rs  lib.rs  s3_export.rs  s3_import.rs
crates/tool-runtime/: Cargo.toml
crates/tool-runtime/src/: bridge.rs  context.rs  conversation.rs  lib.rs  permission.rs  provider.rs  registry.rs  runtime.rs  stream.rs  tool.rs
(+509 files in other folders)
