[workspace]
members = [
    "crates/core",
    "crates/segment",
    "crates/graph",
    "crates/ingest",
    "crates/connector",
    "crates/compute",
    "crates/catalog",
    "crates/llm",
    "crates/storage",
    "crates/athena",
    "crates/server",
    "crates/queue",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# Parquet/Arrow
parquet = { version = "54", features = ["arrow"] }
arrow = "54"

# Memory mapping
memmap2 = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Compression
zstd = "0.13"

# Parallelism
rayon = "1.10"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

# Filesystem
walkdir = "2"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }

# Cloud storage
object_store = { version = "0.11", features = ["aws"] }
bytes = "1"
futures = "0.3"
url = "2"
lru = "0.12"

# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-athena = "1"
aws-sdk-s3 = "1"
aws-types = "1"
