[project]
name = "francis-stupid-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.74.0",
    "easyocr>=1.7.2",
    "pymupdf>=1.27.1",
]

[tool.uv.workspace]
members = [
    "packages/stupid-claude-agent",
    "packages/kg-pg-mcp",
]
