[package]
name = "stupid-agent"
version.workspace = true
edition.workspace = true

[dependencies]
stupid-core = { path = "../core" }
stupid-llm = { path = "../llm" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
