[package]
name = "stupid-agent"
version.workspace = true
edition.workspace = true

[dependencies]
stupid-core = { path = "../core" }
stupid-llm = { path = "../llm" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
stupid-eisenbahn = { path = "../eisenbahn" }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[[bin]]
name = "agent-worker"
path = "src/bin/agent-worker.rs"

[dev-dependencies]
tempfile = "3.25.0"
