[package]
name = "stupid-athena"
version.workspace = true
edition.workspace = true

[dependencies]
stupid-core = { path = "../core" }

# AWS
aws-config = { workspace = true }
aws-sdk-athena = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-types = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Parquet/Arrow
parquet = { workspace = true }
arrow = { workspace = true }

# Logging
tracing = { workspace = true }
stupid-eisenbahn = { path = "../eisenbahn" }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "athena-worker"
path = "src/bin/athena-worker.rs"
