[package]
name = "stupid-catalog"
version.workspace = true
edition.workspace = true

[dependencies]
stupid-core = { path = "../core" }
stupid-graph = { path = "../graph" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
stupid-eisenbahn = { path = "../eisenbahn" }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "catalog-worker"
path = "src/bin/catalog-worker.rs"

[dev-dependencies]
tempfile = "3"
