[package]
name = "stupid-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "stupid-cli"
path = "src/main.rs"

[dependencies]
stupid-tool-runtime = { path = "../tool-runtime" }
stupid-llm = { path = "../llm" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
crossterm = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
