[package]
name = "stupid-compute"
version.workspace = true
edition.workspace = true

[dependencies]
stupid-core = { path = "../core" }
stupid-graph = { path = "../graph" }
stupid-rules = { path = "../rules" }
rayon = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
