[package]
name = "stupid-graph"
version.workspace = true
edition.workspace = true

[dependencies]
stupid-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
stupid-eisenbahn = { path = "../eisenbahn" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "graph-worker"
path = "src/bin/graph-worker.rs"
