[package]
name = "stupid-ingest"
version.workspace = true
edition.workspace = true

[dependencies]
stupid-core = { path = "../core" }
stupid-rules = { path = "../rules" }
parquet = { workspace = true }
arrow = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
lru = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pdf-extract = { workspace = true }
stupid-eisenbahn = { path = "../eisenbahn" }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[[bin]]
name = "ingest-worker"
path = "src/bin/ingest-worker.rs"
