[package]
name = "stupid-llm"
version.workspace = true
edition.workspace = true

[dependencies]
stupid-core = { path = "../core" }
stupid-catalog = { path = "../catalog" }
stupid-graph = { path = "../graph" }
stupid-tool-runtime = { path = "../tool-runtime" }
reqwest = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
