[package]
name = "stupid-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Internal
stupid-tool-runtime = { path = "../tool-runtime" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
