[package]
name = "stupid-notify"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["rustls-tls"] }
lettre = { workspace = true }
minijinja = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
