[package]
name = "stupid-queue"
version = "0.1.0"
edition = "2021"

[dependencies]
stupid-core = { path = "../core" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
aws-sdk-sqs = "1"
aws-config = "1"
aws-credential-types = "1"
