[package]
name = "stupid-rules"
version.workspace = true
edition.workspace = true

[dependencies]
stupid-core = { path = "../core" }
serde = { workspace = true }
serde_yaml = { workspace = true }
notify = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
cron = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
stupid-eisenbahn = { path = "../eisenbahn" }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "rules-worker"
path = "src/bin/rules-worker.rs"

[dev-dependencies]
tempfile = "3"
