[package]
name = "stupid-segment"
version.workspace = true
edition.workspace = true

[dependencies]
stupid-core = { path = "../core" }
stupid-ingest = { path = "../ingest" }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
memmap2 = { workspace = true }
tracing = { workspace = true }
zstd = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
stupid-eisenbahn = { path = "../eisenbahn" }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[[bin]]
name = "segment-worker"
path = "src/bin/segment-worker.rs"
