[package]
name = "stupid-server"
version.workspace = true
edition.workspace = true

[dependencies]
stupid-core = { path = "../core" }
stupid-segment = { path = "../segment" }
stupid-graph = { path = "../graph" }
stupid-ingest = { path = "../ingest" }
stupid-connector = { path = "../connector" }
stupid-compute = { path = "../compute" }
stupid-catalog = { path = "../catalog" }
stupid-llm = { path = "../llm" }
stupid-agent = { path = "../agent" }
stupid-rules = { path = "../rules" }
stupid-notify = { path = "../notify" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
notify = { workspace = true }
futures = { workspace = true }
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
url = { workspace = true }
urlencoding = "2"
tempfile = { version = "3", optional = true }

# AWS-gated dependencies (skip with --no-default-features for faster local dev)
stupid-storage = { path = "../storage", optional = true }
stupid-queue = { path = "../queue", optional = true }
stupid-athena = { path = "../athena", optional = true }
aws-sdk-athena = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-credential-types = { version = "1", optional = true }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["aws"]
aws = [
    "dep:stupid-storage",
    "dep:stupid-queue",
    "dep:stupid-athena",
    "dep:aws-sdk-athena",
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:tokio-stream",
]
