[package]
name = "stupid-server"
version.workspace = true
edition.workspace = true

[dependencies]
stupid-core = { path = "../core" }
stupid-segment = { path = "../segment" }
stupid-graph = { path = "../graph" }
stupid-ingest = { path = "../ingest" }
stupid-connector = { path = "../connector" }
stupid-compute = { path = "../compute" }
stupid-catalog = { path = "../catalog" }
stupid-llm = { path = "../llm" }
stupid-agent = { path = "../agent" }
stupid-tool-runtime = { path = "../tool-runtime" }
stupid-rules = { path = "../rules" }
stupid-notify = { path = "../notify" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
notify = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
url = { workspace = true }
urlencoding = "2"
stupid-storage = { path = "../storage" }
stupid-eisenbahn = { path = "../eisenbahn" }
stupid-queue = { path = "../queue" }
stupid-athena = { path = "../athena" }
aws-sdk-athena = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { version = "1" }
tokio-stream = "0.1"
sqlx = { workspace = true }
pgvector = { workspace = true }
indexmap = { workspace = true }
cron = "0.12"
redis = { version = "0.27", features = ["tokio-comp"], optional = true }
aws-sdk-sqs = { version = "1", optional = true }
async-nats = { version = "0.38", optional = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true }

[features]
default = []
queue-redis = ["dep:redis"]
queue-sqs = ["dep:aws-sdk-sqs"]
queue-nats = ["dep:async-nats"]

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
