[package]
name = "stupid-tool-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Internal
stupid-core = { path = "../core" }

[features]
test-utils = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
